Fix issue with google maps on small screen display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,4 +459,11 @@ footer {
         font-size: 0.8rem;
     }
 
+    .about-section {
+        flex-direction: column;  
+        margin: 0 5%      
+    }
+
+    ;
+
 }
